--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,12 @@ cython_debug/
 
 # VSCode
 .vscode/
+
+# Zip files
+*.zip
+
+# Terraform
+terraform/.terraform/
+terraform/.terraform*
+terraform.tfstate*
+terraform/*.tfvars
