--- a/setup.cfg
+++ b/setup.cfg
@@ -1,16 +1,16 @@
 [metadata]
-name = gcp-gke-vpc-updater
+name = update_vpc_peering
 version = 0.0.1
 
 [options]
 package_dir=
-    =src/modules
+    =src/packages
 packages=find:
 install_requires =
     google-cloud-compute==1.11.0
 
 [options.packages.find]
-where=src/modules
+where=src/packages
 
 [flake8]
 max-line-length = 99
